welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: value -= is not a member of Int
  if (isBirthday){speed -= 5}
                        ^